<resources>
    <string name="app_name">EcoTasker</string>
    <string name="titulo_juego">Juego de Memoria Sostenible</string>
    <string name="texto_stats">Intentos: %1$d | Pares: %2$d/8</string>
    <string name="btn_reiniciar">Reiniciar Juego</string>
    <string name="menu_titulo">MENÚ PRINCIPAL</string>
    <string name="btn_actividades">Gestión de Actividades</string>
    <string name="btn_hidratacion">Control de Hidratación</string>
    <string name="btn_sostenibilidad">Registro diario de Sostenibilidad</string>
    <string name="btn_juego">Juego de Memoria</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_volver_menu">Volver al Menú</string>
    <string name="btn_ver_respuestas">👁️ Ver Respuestas (Solo Ing. Gladys)</string>
    <string name="btn_ir_inicio">Inicio del Juego</string>
    <string name="desc_carta">Carta oculta del juego de memoria</string>
    <string name="nombre_proyecto">EcoTasker</string>
</resources>